test/frontend/fail/negative_array_size.osl
shader foo() {
    int i[-1];
}
